log
Thu Apr 16 08:01:52 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
1580034
Thu Apr 16 08:09:12 PM UTC 2026: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:25: error: ‘capacity’ undeclared (first use in this function)
   62 |     int pos = hash(key, capacity);
      |                         ^~~~~~~~
hashmap.c:62:25: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:63:61: error: comparison between pointer and integer [-Werror]
   63 |     if (map->buckets[pos] != NULL || map->buckets[pos]->key != -1){
      |                                                             ^~
cc1: all warnings being treated as errors
15acf2f
Thu Apr 16 08:09:42 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:61: error: comparison between pointer and integer [-Werror]
   63 |     if (map->buckets[pos] != NULL || map->buckets[pos]->key != -1){
      |                                                             ^~
cc1: all warnings being treated as errors
77cf559
Thu Apr 16 08:10:42 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d437109
Thu Apr 16 08:12:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8d6f2d7
Thu Apr 16 08:13:53 PM UTC 2026: 
 tests:  0|0
1b91b50
Thu Apr 16 08:16:17 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9d3a39a
Thu Apr 16 08:18:09 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:35: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   63 |     if (map->capacity < 1) return NULL;
      |                                   ^~~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
1963907
